--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="product-card card">
                     <div class="card__img">
-                        <img src="img/test1.jpg" alt="foto1">
+                        <img src="img/test2.jpg" alt="foto1">
                     </div>
                     <div class="card__box">
                         <h3 class="card__title">Нативные крахмалы</h3>
@@ -91,12 +91,12 @@
                             в бумаге с покрытием.</p>
                     </div>
                     <div class="card__img">
-                        <img src="img/test1.jpg" alt="foto1">
+                        <img src="img/test3.webp" alt="foto1">
                     </div>
                 </div>
                 <div class="product-card card">
                     <div class="card__img">
-                        <img src="img/test1.jpg" alt="foto1">
+                        <img src="img/test4.jpg" alt="foto1">
                     </div>
                     <div class="card__box">
                         <h3 class="card__title">Глютен кукурузный</h3>
@@ -123,7 +123,7 @@
                             в бумаге с покрытием.</p>
                     </div>
                     <div class="card__img">
-                        <img src="img/test1.jpg" alt="foto1">
+                        <img src="img/test5.jpg" alt="foto1">
                     </div>
                 </div>
                 <div class="section-product__btn">
