--- a/index.html
+++ b/index.html
@@ -178,6 +178,40 @@
                 <button href="#" class="btn">Оставить заявку</button>
             </div>
         </div>
+        <div class="section-delivery container">
+            <div class="section-delivery__title">
+                <h2 class="title">Доставка
+                    <hr class="title__hr">
+                </h2>
+            </div>
+            <div class="section-delivery__wrapper">
+                <div class="section-delivery__left">
+                    <h3 class="left__title">Автотранспортом</h3>
+                    <p class="left__paragraf">Перевозка груза автомобильным транспортом – это распространенный вид
+                        междугородних перевозок грузов. Дорожные покрытия проложены между городами, имеющими важное
+                        транспортное снабжение, что упрощает доставку между населенными пунктами, заказчиком и
+                        получателем.</p>
+                    <h3 class="left__title">Железнодорожным транспортом</h3>
+                    <p class="left__paragraf">Доставка железнодорожным транспортом безопасна как для людей, так и для
+                        внешней среды. Это четкий маршрут и возможность быстрого определения местонахождения поезда.
+                        Несмотря на то, что доставка железнодорожным транспортом имеет упрощенную форму, есть документы,
+                        которые грузоотправителю необходимо будет оформить в обязательном порядке.</p>
+                    <h3 class="left__title">Контейнерные перевозки</h3>
+                    <p class="left__paragraf">Контейнерные перевозки (или контейнеризация) — грузоперевозки с
+                        использованием стандартных контейнеров. Позволяют выполнять бесперегрузочную доставку товаров от
+                        отправителя к получателю, тем самым значительно сократив объём промежуточных
+                        погрузочно-разгрузочных работ.</p>
+                </div>
+                <div class="section-delivery__right">
+                    <img class="right-img right-img__1" src="img/delivery1.jpg" alt="">
+                    <img class="right-img right-img__2" src="img/delivery2.jpg" alt="">
+                    <img class="right-img right-img__3" src="img/delivery3.jpg" alt="">
+                </div>
+            </div>
+            <div class="section-delivery__btn">
+                <button href="#" class="btn">Оставить заявку</button>
+            </div>
+        </div>
     </main>
 
 </body>
