--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="css/style.min.css">
     <title>ProgressUG</title>
     <meta name="description" content="Продажа кукурузного крахмала">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="icons/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="icons/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="icons/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="icons/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="icons/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="icons/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="icons/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icons/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="icons/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
+    <link rel="manifest" href="icons/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="icons/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body style="overflow-x: hidden;">
@@ -23,7 +41,8 @@
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#package">Упаковка</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#delivery">Доставка</a></li>
                     <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#aboutUs">О нас</a></li>
-                    <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#connection">Связаться с нами</a></li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__list-link" href="#connection">Связаться с
+                            нами</a></li>
                 </ul>
             </nav>
         </div>
@@ -248,7 +267,7 @@
                     </div>
                     <div class="form__group">
                         <input type="text" class="form__input form__input-3" placeholder="Введите текст" id="text">
-                        <label for="text" class="form__label">Текст</label>
+                        <label for="text" class="form__label">Текст сообщения</label>
                     </div>
                     <div class="form__group form-btn">
                         <button class="btn">Оставить заявку</button>
