day third add two

--- a/index.html
+++ b/index.html
@@ -273,6 +273,20 @@
                         <button class="btn">Оставить заявку</button>
                     </div>
                 </form>
+                <div class="section-connection__address">
+                    <div class="stavropol">
+                        <h3 class="stavropol-title">Ставрополь</h3>
+                        <p class="stavropol-phone"><span>Телефон:</span> 8-652-5-17-37</p>
+                        <p class="stavropol-time"><span>Режим работы:</span><br>Понедельник-Пятница, 09:00–18:00</p>
+                        <p class="stavropol-address"><span>Адрес:</span> ул. Маршала Жукова, 27</p>
+                    </div>
+                    <div class="svetlograd">
+                        <h3 class="svetlograd-title">Светлоград</h3>
+                        <p class="svetlograd-phone"><span>Телефон:</span> 8-6547-4-30-18</p>
+                        <p class="svetlograd-time"><span>Режим работы:</span><br>Понедельник-Пятница, 08:00–17:00</p>
+                        <p class="svetlograd-address"><span>Адрес:</span> ул. Привокзальная, 18. кб.1</p>
+                    </div>
+                </div>
             </div>
         </div>
 
