--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
                         <label for="email" class="form__label">Ваш email</label>
                     </div>
                     <div class="form__group">
+                        <input type="phone" class="form__input" placeholder="Ваш телефон" id="phone" required>
+                        <label for="phone" class="form__label">Ваш Телефон</label>
+                    </div>
+                    <div class="form__group">
                         <input type="text" class="form__input form__input-3" placeholder="Введите текст" id="text">
                         <label for="text" class="form__label">Текст сообщения</label>
                     </div>
