--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 <body style="overflow-x: hidden;">
 
     <header class="header">
+
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
         <div class="header__menu container">
             <div class="header__logo">
                 <img src="icons/logo.png" alt="logo">
@@ -287,22 +294,22 @@
     </main>
 
     <footer class="footer">
-        <div class="footer__nav nav-menu">
-            <ul class="nav-menu__list footer__nav-menu">
-                <li class="nav-menu__list-item footer-menu__list-item"><a
-                        class="nav-menu__list-link footer-menu__list-link" href="#product">Продукция</a></li>
-                <li class="nav-menu__list-item footer-menu__list-item"><a
-                        class="nav-menu__list-link footer-menu__list-link" href="#package">Упаковка</a></li>
-                <li class="nav-menu__list-item footer-menu__list-item"><a
-                        class="nav-menu__list-link footer-menu__list-link" href="#delivery">Доставка</a></li>
-                <li class="nav-menu__list-item footer-menu__list-item"><a
-                        class="nav-menu__list-link footer-menu__list-link" href="#aboutUs">О нас</a></li>
-                <li class="nav-menu__list-item footer-menu__list-item"><a
-                        class="nav-menu__list-link footer-menu__list-link" href="#connection">Связаться с нами</a></li>
+        <div class="footer__nav footer__nav-menu">
+            <ul class="footer-menu__list">
+                <li class="footer-menu__list-item"><a
+                        class="footer-menu__list-link" href="#product">Продукция</a></li>
+                <li class="footer-menu__list-item"><a
+                        class="footer-menu__list-link" href="#package">Упаковка</a></li>
+                <li class="footer-menu__list-item"><a
+                        class="footer-menu__list-link" href="#delivery">Доставка</a></li>
+                <li class="footer-menu__list-item"><a
+                        class="footer-menu__list-link" href="#aboutUs">О нас</a></li>
+                <li class="footer-menu__list-item"><a
+                        class="footer-menu__list-link" href="#connection">Связаться с нами</a></li>
             </ul>
         </div>
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
