--- a/index.html
+++ b/index.html
@@ -259,15 +259,15 @@
                         <label for="name" class="form__label">Ваше Имя</label>
                     </div>
                     <div class="form__group">
-                        <input type="email" class="form__input" placeholder="Ваш E-mail" id="email" required>
-                        <label for="email" class="form__label">Ваш email</label>
+                        <input type="email" class="form__input" placeholder="E-mail" id="email" required>
+                        <label for="email" class="form__label">Email</label>
                     </div>
                     <div class="form__group">
-                        <input type="phone" class="form__input" placeholder="Ваш телефон" id="phone" required>
-                        <label for="phone" class="form__label">Ваш Телефон</label>
+                        <input type="phone" class="form__input" placeholder="Телефон" id="phone" required>
+                        <label for="phone" class="form__label">Телефон</label>
                     </div>
                     <div class="form__group">
-                        <input type="text" class="form__input form__input-3" placeholder="Введите текст" id="text">
+                        <input type="text" class="form__input form__input-3" placeholder="Текст сообщения" id="text">
                         <label for="text" class="form__label">Текст сообщения</label>
                     </div>
                     <div class="form__group form-btn">
