day first six php2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body style="overflow-x: hidden;">
-
+    
     <header class="header">
 
         <div class="hamburger">
@@ -255,20 +255,23 @@
             <div class="section-connection__box">
                 <form action="sendmail.php" method="POST" class="form" id="date">
                     <div class="form__group">
-                        <input type="text" class="form__input" name="name" placeholder="Ваше Имя" id="name" maxlength="15" required>
+                        <input type="text" class="form__input" name="name" placeholder="Ваше Имя" id="name"
+                            maxlength="15" required>
                         <label for="name" class="form__label">Ваше Имя</label>
                     </div>
                     <div class="form__group">
-                        <input type="email" class="form__input" name="email" placeholder="E-mail" id="email" maxlength="50" required>
+                        <input type="email" class="form__input" name="email" placeholder="E-mail" id="email"
+                            maxlength="50" required>
                         <label for="email" class="form__label">Email</label>
                     </div>
                     <div class="form__group">
-                        <input type="phone" class="form__input" name="phone" placeholder="Телефон" id="phone" maxlength="15" required>
+                        <input type="phone" class="form__input" name="phone" placeholder="Телефон" id="phone"
+                            maxlength="15" required>
                         <label for="phone" class="form__label">Телефон</label>
                     </div>
                     <div class="form__group">
-                        <input type="text" class="form__input form__input-3" name="text" maxlength="150" placeholder="Текст сообщения"
-                            id="text">
+                        <input type="text" class="form__input form__input-3" name="text" maxlength="150"
+                            placeholder="Текст сообщения" id="text">
                         <label for="text" class="form__label">Текст сообщения</label>
                     </div>
                     <div class="form__group form-btn">
